--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1 style="margin-top: 100px; text-align: center; color: #ffffff;">All aBoard Message Board</h1>
 
   <div class="box">
+    <h2 style="text-align: center;">Log in</h2>
     <form action="login.py" method="post">
     Username:<input type="text" name="user"><br>
     Password:<input type="password" name="pass"><br><br>
