--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>All aBoard Message Board</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="bubble.ico"/>
 </head>
 <body>
   <h1 style="margin-top: 100px; text-align: center; color: #ffffff;">All aBoard Message Board</h1>
