--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
   <title>All aBoard Message Board - Register</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="bubble.ico"/>
 
   <script>
   function submitValidation(){
