Implemented message deletion and timestamp

--- a/signup.html
+++ b/signup.html
@@ -71,7 +71,7 @@
     </form>
   </div><br>
   <div class="box">
-    <a href="index.py">Home</a>
+    <a href="login.html">Log in</a>
   </div>
 
   <!-- ***************************************************************
