Should be fully functional now

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
   <h1 style="margin-top: 100px; text-align: center; color: #ffffff;">All aBoard Message Board</h1>
 
-  <div class="box">
+  <div class="box2">
     <h2 style="text-align: center;">Log in</h2>
     <span id='error'></span>
     <form action="index.py" method="post">
@@ -21,7 +21,7 @@
     <input type="submit" value="Log In" style="display: block; margin: auto;">
     </form>
   </div><br>
-  <div class="box">
+  <div class="box2">
     <a href="signup.html">Register</a>
   </div>
 
