--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
 <body>
   <h1 style="margin-top: 100px; text-align: center; color: #ffffff;" onclick="window.location.href='index.py';">All aBoard Message Board</h1>
 
-  <div class="box">
+  <div class="box2">
     <h2 style="text-align: center;">Registration</h2>
     <form action="signup.py" method="post" onsubmit="return submitValidation();">
     Username:<input type="text" id="user" name="user"><br>
@@ -70,7 +70,7 @@
     <input type="submit" value="Register" style="display: block; margin: auto;">
     </form>
   </div><br>
-  <div class="box">
+  <div class="box2">
     <a href="login.html">Log in</a>
   </div>
 
