--- a/login.html
+++ b/login.html
@@ -22,7 +22,8 @@
     </form>
   </div><br>
   <div class="box2">
-    <a href="signup.html">Register</a>
+    <a href="signup.html">Register</a> 
+    <a href="http://midn.cs.usna.edu/~m207026/project02/admin">Admin Panel</a>
   </div>
 
   <!-- ***************************************************************
